fetch song data

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" 
+        content="width=device-width, initial-scale=1.0">
+  <title>Awesome Music</title>
   <script src="main.js" defer></script>
-  <title>Music Search</title>
 </head>
 <body>
+  <h1>Really Awesome Music Site</h1>
+
+  <div id="container"></div>
+
 </body>
 </html>
