flex display of songs

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta name="viewport" 
         content="width=device-width, initial-scale=1.0">
   <title>Awesome Music</title>
+  <link rel="stylesheet"'type="text/css" href="main.css">
   <script src="main.js" defer></script>
 </head>
 <body>
-  <h1>Really Awesome Music Site</h1>
+  <header>
+    <h1>Really Awesome Music Site</h1>
+  </header>
 
   <div id="container"></div>
 
