--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" 
-        content="width=device-width, initial-scale=1.0">
-  <title>Awesome Music</title>
-  <link rel="stylesheet"'type="text/css" href="main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
   <script src="main.js" defer></script>
+  <title>Music Search</title>
 </head>
-<body>
-  <header>
-    <h1>Really Awesome Music Site</h1>
-  </header>
 
-  <div id="container"></div>
+<body>
+  <h1>MyTunes</h1>
+  <div id="search">
+    <form id="search-form" action="">
+      <label for="term">Search Term</label>
+      <input id="search-box" type="text" name="term">
+      <button>Search</button>
+    </form>
+  </div>
+
+  <div id="container"> </div>
 
 </body>
-</html>
+</html> -->
