--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
   <h1>MyTunes</h1>
   <div id="search">
     <form id="search-form" action="">
-      <label for="term">Search Term</label>
-      <input id="search-box" type="text" name="term">
+      <label for="searchTerm">Search Term</label>
+      <input id="search-box" type="text" name="searchTerm">
       <button>Search</button>
     </form>
+  </div>
+
+  <div id="musicPlayerDiv">
+    <audio autoplay id="musicPlayer" controls src=""></audio>
+    <div class="currentSong">Currently Playing</div>  
   </div>
 
   <div id="container"> </div>
 
 </body>
-</html> -->
+</html>
